# fastapi-finance-manager

./: .env.examples  .gitignore  Dockerfile  docker-compose.yml  main.py  notification_service.py  pyproject.toml  requirements.txt
.github/workflows/: security_scan.yml
src/configurations/: database.py  settings.py
src/configurations/oauth/: google.py
src/dependences/: auth_dependency.py
src/models/: __init__.py  category_model.py  transaction_model.py  user_model.py
src/repositories/: auth_repo.py  category_repo.py  transaction_repo.py
src/routers/: auth_route.py  category_route.py  transaction_route.py
src/schemas/: auth_schema.py  category_schema.py  transaction_schema.py
src/services/: auth_service.py  category_service.py  notification_service.py  transaction_service.py
src/utils/: auth_util.py  celery_worker.py  email_util.py  logger.py  oauth_parser.py
templates/: verify_user_template.html
