[project]
name = "fastapi-finance-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "celery>=5.5.3",
    "fastapi-mail>=1.5.0",
    "fastapi[all]>=0.115.12",
    "isort>=6.0.1",
    "passlib>=1.7.4",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
